--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h1> VærTaktisk: </h1>
                 <div style="display:flex; flex-direction: row; ;">
                     <div>
-                        <div class="InfoText"> Weather application for Children</div>
+                        <div class="InfoText"> Weather application for children</div>
                         <div class="InfoText"> Languages/tools: Figma, Kotlin & Android Studio </div>
                         <div class="InfoText"> Experience:
                             <br> Learned a new lanauge and deployed within 4 months 
